# sem_search

./: .dockerignore  .gitignore  INSTRUCTION.md  README.md  pyproject.toml  requirements.md  requirements.txt
app/: config.py  dependencies.py  main.py
app/admin/: manifest.py  query_log.py  service.py  versioning.py
app/api/: routes_admin.py  routes_folder_index.py  routes_health.py  routes_index.py  routes_reindex.py  routes_search.py  schemas.py
app/chunking/: base.py  factory.py  fixed_window.py  paragraph.py  sentence_split.py  sentence_window.py
app/core/: errors.py  ids.py  types.py
app/embedding/: base.py  factory.py  st_embedder.py
app/hybrid/: base.py  factory.py  rrf.py  weighted.py
app/indexing/: corpus_store.py  service.py
app/lexical/: base.py  bm25_index.py  factory.py  tokenizer.py
app/preprocessing/: base.py  cleaners.py  file_loader.py  loaders.py
app/query/: base.py  factory.py  term_expansion.py  typo_correction.py
app/rerank/: base.py  cross_encoder.py  factory.py
app/search/: active_index.py  filters.py  retrievers.py  service.py
app/templates/: search.html
app/vector_store/: base.py  factory.py  qdrant_store.py
config/: config.resource_saving.yaml  config.yaml  docker.yaml
data/dictionaries/: abbrev_dict.json  terms_dictionary.yaml
docker/: Dockerfile  docker-compose.yml
tests/: README.md
tests/e2e/: test_rusbeir_e2e.py
tests/integration/: conftest.py  test_acceptance.py  test_admin_api.py  test_folder_index_api.py  test_indexing_api.py  test_indexing_edge_cases.py  test_search_api.py  test_search_dense_rerank.py  test_search_edge_cases.py  test_search_hybrid_rerank.py  test_search_query_processing.py
tests/load/: locustfile.py
tests/test_data/: synthetic_corpus.json  synthetic_qrels.json
tests/unit/: test_active_index_resolver.py  test_admin_manifest.py  test_admin_service_rollback.py  test_admin_versioning.py  test_chunking_fixed_60.py  test_chunking_fixed_window.py  test_chunking_paragraph.py  test_chunking_sentence_window.py  test_embedding.py  test_file_loader.py  test_hybrid_rrf.py  test_hybrid_weighted.py  test_indexing_service.py  (+14 more)
